# hdb-kaki

./: .gitignore  README.md  data.csv  pyproject.toml  requirements.txt
.github/workflows/: etl.yaml
data/: 2017-01.csv  2017-02.csv  2017-03.csv  2017-04.csv  2017-05.csv  2017-06.csv  2017-07.csv  2017-08.csv  2017-09.csv  2017-10.csv  2017-11.csv  2017-12.csv  2018-01.csv  2018-02.csv  2018-03.csv  2018-04.csv  2018-05.csv  2018-06.csv  2018-07.csv  2018-08.csv  2018-09.csv  2018-10.csv  2018-11.csv  2018-12.csv  2019-01.csv  2019-02.csv  2019-03.csv  2019-04.csv  2019-05.csv  2019-06.csv  2019-07.csv  2019-08.csv  2019-09.csv  2019-10.csv  2019-11.csv  2019-12.csv  2020-01.csv  2020-02.csv  2020-03.csv  2020-04.csv  (+77 more)
webapp/: 0_🔑_HDB_Kaki.py  filter.py  read.py
webapp/pages/: 3 🔍_Town_Analysis.py  4📈_PSF_Trend_Analysis.py  5💲_Highest_Resale_Price.py
webapp/update/: convert.py  etl.py  extract.py
